Bug fix -> Show more link was hidden by css

--- a/assets/css/cloudwalkers.css
+++ b/assets/css/cloudwalkers.css
@@ -1128,8 +1128,6 @@ tbody.messages-container i	{
 
 .unloaded.loaded	{opacity: 1; bottom: 0px;}
 
-.btn.load-more	{display: none;}
-
 .progress-bar{
 	position: absolute; z-index: 1; height: 2px; width: 0%; background-color: #2bbedc;	box-shadow: 0 1px 3px rgba(0,0,0,0.2); opacity: 1;
 	-webkit-transition: width 3s ease-out;
